compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_with_block.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 491
expression: "echo { 1 + 1 }"
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 14,
            },
            keyword_end: 4,
            expression: Some(
                Block {
                    location: SrcSpan {
                        start: 5,
                        end: 14,
                    },
                    statements: [
                        Expression(
                            BinOp {
                                location: SrcSpan {
                                    start: 7,
                                    end: 12,
                                },
                                name: AddInt,
                                name_location: SrcSpan {
                                    start: 9,
                                    end: 10,
                                },
                                left: Int {
                                    location: SrcSpan {
                                        start: 7,
                                        end: 8,
                                    },
                                    value: "1",
                                    int_value: 1,
                                },
                                right: Int {
                                    location: SrcSpan {
                                        start: 11,
                                        end: 12,
                                    },
                                    value: "1",
                                    int_value: 1,
                                },
                            },
                        ),
                    ],
                },
            ),
            message: None,
        },
    ),
]
