compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_with_complex_expression.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 476
expression: "echo wibble as { this <> complex }"
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 34,
            },
            keyword_end: 4,
            expression: Some(
                Var {
                    location: SrcSpan {
                        start: 5,
                        end: 11,
                    },
                    name: "wibble",
                },
            ),
            message: Some(
                Block {
                    location: SrcSpan {
                        start: 15,
                        end: 34,
                    },
                    statements: [
                        Expression(
                            BinOp {
                                location: SrcSpan {
                                    start: 17,
                                    end: 32,
                                },
                                name: Concatenate,
                                name_location: SrcSpan {
                                    start: 22,
                                    end: 24,
                                },
                                left: Var {
                                    location: SrcSpan {
                                        start: 17,
                                        end: 21,
                                    },
                                    name: "this",
                                },
                                right: Var {
                                    location: SrcSpan {
                                        start: 25,
                                        end: 32,
                                    },
                                    name: "complex",
                                },
                            },
                        ),
                    ],
                },
            ),
        },
    ),
]
