compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_with_let_assert_and_messages.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 572
expression: let assert 1 = echo 1 as this_belongs_to_echo as this_belongs_to_assert
snapshot_kind: text
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 0,
                end: 71,
            },
            value: Echo {
                location: SrcSpan {
                    start: 15,
                    end: 45,
                },
                keyword_end: 19,
                expression: Some(
                    Int {
                        location: SrcSpan {
                            start: 20,
                            end: 21,
                        },
                        value: "1",
                        int_value: 1,
                    },
                ),
                message: Some(
                    Var {
                        location: SrcSpan {
                            start: 25,
                            end: 45,
                        },
                        name: "this_belongs_to_echo",
                    },
                ),
            },
            pattern: Int {
                location: SrcSpan {
                    start: 11,
                    end: 12,
                },
                value: "1",
                int_value: 1,
            },
            kind: Assert {
                location: SrcSpan {
                    start: 0,
                    end: 10,
                },
                assert_keyword_start: 4,
                message: Some(
                    Var {
                        location: SrcSpan {
                            start: 49,
                            end: 71,
                        },
                        name: "this_belongs_to_assert",
                    },
                ),
            },
            compiled_case: CompiledCase {
                tree: Fail,
                subject_variables: [],
            },
            annotation: None,
        },
    ),
]
