compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_with_no_expressions_after_it_but_a_message.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 486
expression: echo as message
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 15,
            },
            keyword_end: 4,
            expression: None,
            message: Some(
                Var {
                    location: SrcSpan {
                        start: 8,
                        end: 15,
                    },
                    name: "message",
                },
            ),
        },
    ),
]
