compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_with_panic_and_message.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 532
expression: "echo panic as \"a\""
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 17,
            },
            keyword_end: 4,
            expression: Some(
                Panic {
                    location: SrcSpan {
                        start: 5,
                        end: 17,
                    },
                    message: Some(
                        String {
                            location: SrcSpan {
                                start: 14,
                                end: 17,
                            },
                            value: "a",
                        },
                    ),
                },
            ),
            message: None,
        },
    ),
]
