compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__echo_with_simple_expression_1.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 466
expression: echo wibble as message
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 22,
            },
            keyword_end: 4,
            expression: Some(
                Var {
                    location: SrcSpan {
                        start: 5,
                        end: 11,
                    },
                    name: "wibble",
                },
            ),
            message: Some(
                Var {
                    location: SrcSpan {
                        start: 15,
                        end: 22,
                    },
                    name: "message",
                },
            ),
        },
    ),
]
